# todoist-cli

./: .gitignore  README.md  compile.sh  icon.xpm  pyproject.toml
pynguin-report/: statistics.csv
test/: test_complete_task.py  test_list_tasks.py  test_new_task.py
test_autogenerated/: test_list_tasks.py  test_new_task.py
todoist_cli/: __init__.py  __main__.py  cli.py  complete_task.py  list_tasks.py  new_task.py  utils.py
