[tool.poetry]
name = "todoist-cli"
version = "0.1.0"
description = "A CLI tool for Todoist"
authors = ["Peter Vyboch <pvyboch1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.5.1"
todoist-api-python = "^1.1.1"
typer = "^0.6.1"
python-dateutil = "^2.8.2"
pytz = "^2022.1"

[tool.poetry.dev-dependencies]
Nuitka = "^1.0.1"
ward = "^0.66.1-beta.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
