[tool.poetry]
name = "todoist-cli"
version = "0.1.3"
description = "A CLI tool for Todoist"
authors = ["Peter Vyboch <pvyboch1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
rich = "^12.5.1"
todoist-api-python = "^1.1.1"
typer = "^0.6.1"
pytz = "^2022.1"
prompt-toolkit = "^3.0.30"
cutie = "^0.2.2"
ordered-set = "^4.1.0"

[tool.poetry.dev-dependencies]
Nuitka = "^1.0.1"
ward = "^0.66.1-beta.0"
pynguin = "^0.25.2"
black = "^22.6.0"

[tool.poetry.scripts]
todoist-cli = "todoist_cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
