[tool.poetry]
name = "todoist-cli"
version = "0.1.4"
description = "A CLI tool for Todoist"
authors = ["Peter Vyboch <pvyboch1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
rich = "^12.5.1"
todoist-api-python = "^1.1.1"
pytz = "^2022.1"
prompt-toolkit = "^3.0.30"
cutie = "^0.2.2"
ordered-set = "^4.1.0"
typer = "0.3.2"

[tool.poetry.dev-dependencies]
Nuitka = "^1.0.1"
ward = "^0.66.1-beta.0"
typer-cli = "^0.0.12"

[tool.poetry.scripts]
todoist-cli = "todoist_cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
